# InsightStream-AI-News-Analysis-System

./: README.md  main.py  pyproject.toml
faiss_index/: index.faiss  index.pkl
services/: ingestion.py  qa.py
ui/: components.py  layout.py
